[package]
name = "candle_collections"
version = "0.1.0"
edition = "2024"

[dependencies]
candle = { version = "0.9.1", package="candle-core", features = ["cuda", "cudnn"]}
candle-nn = { version = "0.9.1", features = ["cuda", "cudnn"]}
cudarc = { version="0.16.6", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cudnn", "cuda-version-from-build-system", "dynamic-linking"], default-features=false  }
realfft = "3.5.0"
